# stickers-bot

./: .env  .gitignore  Cargo.toml  docs.md
src/: config.rs  ffmpeg.rs  lib.rs  main.rs  schema.rs  util.rs
