[package]
name = "video_stickers"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.10", features = [
  "macros",
  "auto-send",
  "ctrlc_handler",
  "sqlite-storage",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.8", features = ["rt-multi-thread", "macros"] }
dotenv = "0.15"
anyhow = "1.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive", "rc"] }
strum = { version = "0.24", features = ["derive"] }
async-trait = "0.1.56"
url = "2.2.2"
toml = "0.5.9"
